
ChangeLog for jsrsasign

* Changes from 6.1.4 to next version
  - base64x
    - fix API document

* Changes from 6.1.3 to 6.1.4 (2016-Oct-16)
  - base64x 1.1.7 to 1.1.8
    - function hextoArrayBuffer and ArrayBuffertohex added
    - some API documents added

* Changes from 6.1.2 to 6.1.3 (2016-Oct-15)
  - asn1csr 1.0.0 to 1.0.1
    - CSRUtil.getInfo method added to parse CSR
  - asn1ocsp
    - OCSPUtil.getOCSPResponseInfo API document added

* Changes from 6.1.1 to 6.1.2 (2016-Oct-08)
  - OCSP Response support
  - asn1hex 1.1.6 to 1.1.7
    - refactoring for static methods
    - encapsulated BitString support
    - more API documents
  - asn1ocsp 1.0.0 to 1.0.1
    - OCSPUtil.getOCSPResponseInfo added
  - merge RegExp fix pull request from @huokko.
    Thank you @huokko.
    (asn1x509, crypto, jws, keyutil, pkcs5pkey)

* Changes from 6.1.0 to 6.1.1 (2016-Sep-25)
  - asn1 1.0.10 to 1.0.11
    - encapsulated ASN.1 structure supported
      in DEROctetString and DERBitString.
    - API document update
  - tool_asn1encoder.html added

* Changes from 6.0.1 to 6.1.0 (2016-Sep-24)
  - asn1ocsp 1.0.0
    - now start to add OCSP protocol support
    - OCSP request ASN.1 classes are added
  - fix API document in x509 and asn1
  - test/qunit-do-{asn1,asn1ocsp}.html added or updated

* Changes from 6.0.0 to 6.0.1 (2016-Sep-12)
  - old jsrsasign.js is used in npm package. now fixed.

* Changes from 5.1.0 to 6.0.0 (2016-Sep-11)
  - As of so much request to remove Node functions
    in nodeutil.js, nodeutil.js have been removed from
    jsrsasign.js package. Then it is moved to
    new "jsrsasign-util" npm package.
    Now "jsrsasign" will be CommonJS, Purescript,
    Webpack and Browserify safe package.
    Some sample Node.js scripts in "sample_node"
    will be updated later.

* Changes from 5.0.15 to 5.1.0 (2016-Sep-07)
  - jwsjs 2.0.15 to 2.1.0
    - refactoring and API document update
    - addSignature, verifyAll, verifyNth method added