@@ -4,6 +4,8 @@ ChangeLog for jsrsasign
 * Changes from 6.1.4 to next version
   - base64x
     - fix API document
+  - npm
+    - missing exports of some global string converter were fixed
 
 * Changes from 6.1.3 to 6.1.4 (2016-Oct-16)
   - base64x 1.1.7 to 1.1.8
